--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
 .menu-toggle {
     display: none;
     font-size: 1.5rem;
-    color: red;
+    color: white;
     background: none;
     border: none;
     cursor: pointer;
